--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 
 android {
     compileSdkVersion 29
@@ -24,6 +27,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
@@ -68,13 +74,20 @@ dependencies {
     implementation 'com.android.support:cardview-v7:29.+'
     implementation 'com.android.support:support-v4:29.0.0'
     implementation 'com.github.smhdk:KM-Recyclerview-Sticky-Header:v1.0.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
-
     implementation 'com.github.HamidrezaAmz:MagicalExoPlayer:1.0.16'
    // compileOnly 'com.google.android.wearable:wearable:2.8.1'
 
     /*google map search location*/
     implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 apply plugin: 'com.google.gms.google-services'
+
+repositories {
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenCentral()
+}
