--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+
+
     <application
         android:allowBackup="true"
-        android:hardwareAccelerated="true"
+        android:hardwareAccelerated="false"
         android:icon="@drawable/logo_350"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@drawable/logo_350"
         android:supportsRtl="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".Activities.WebViewImage"></activity>
@@ -129,14 +132,6 @@
             android:name=".Activities.MobileOTPActivity"
             android:windowSoftInputMode="stateHidden">
 
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
-
         </activity>
         <activity
             android:name=".Activities.RegisterActivity"
@@ -145,7 +140,7 @@
             android:name=".Activities.LoginActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".Activities.SplashActivity">
-            <intent-filter>
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
