--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,15 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
 
-
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
         android:icon="@drawable/logo_350"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/logo_350"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".Activities.WebViewImage"></activity>
@@ -79,7 +78,9 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Activities.OrderProductDetails"
+          android:theme="@style/AppTheme2"
             android:windowSoftInputMode="stateHidden" />
+
         <activity
             android:name=".Activities.ChangeAddressPopup"
             android:windowSoftInputMode="stateHidden" />
@@ -140,7 +141,7 @@
             android:name=".Activities.LoginActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".Activities.SplashActivity">
-           <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
